fix flickering on chrome

--- a/src/app/stylesheets/ui/sidePane.styl
+++ b/src/app/stylesheets/ui/sidePane.styl
@@ -171,10 +171,6 @@
     cursor: pointer;
     opacity: .6;
 
-    -webkit-transition: background .5s, opacity .5s;
-    -moz-transition: background .5s, opacity .5s;
-    transition: background .5s, opacity .5s;
-
     -webkit-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
     -moz-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
     -ms-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
